--- a/resume.html
+++ b/resume.html
@@ -416,8 +416,8 @@ blockquote {
 <p> </p>
 <h5 id="professional-experience">PROFESSIONAL EXPERIENCE</h5>
 <hr>
-<p>August 2018 - Present
-<strong>HomeLight</strong>
+<p>August 2018 - Present<br>
+<strong>HomeLight</strong><br>
 <em>Senior Software Engineer</em></p>
 <ul>
 <li>Decoupled Investor business from Agent business by:
@@ -450,8 +450,9 @@ blockquote {
 </ul>
 </li>
 </ul>
-<p>March 2016 - August 2018
-<strong>Carvana</strong>
+<p> </p>
+<p>March 2016 - August 2018<br>
+<strong>Carvana</strong><br>
 <em>Software Engineer</em></p>
 <ul>
 <li>Built SOA software for a transaction process. This involved creating small services for determining purchase price, available ancillary products, payment and financing options, and purchase orders.</li>
@@ -466,8 +467,9 @@ blockquote {
 </ul>
 </li>
 </ul>
-<p>April 2015 - March 2016
-<strong>Spireon, Inc.</strong>
+<p> </p>
+<p>April 2015 - March 2016<br>
+<strong>Spireon, Inc.</strong><br>
 <em>Lead Software Engineer</em></p>
 <ul>
 <li>Built a vehicle tracking web solution utilizing google maps to to determine a path using multiple geo points.</li>
@@ -475,8 +477,9 @@ blockquote {
 <li>Implemented basic CRUD operations.</li>
 <li>Directed and participated in the develompment of an iOS app written in Objective-C and Swift.</li>
 </ul>
-<p>April 2011 - April 2015
-<strong>InEight, Inc.</strong>
+<p> </p>
+<p>April 2011 - April 2015<br>
+<strong>InEight, Inc.</strong><br>
 <em>Software Engineer I</em></p>
 <ul>
 <li>Built a web admin portal using AngularJS and Bootstrap.</li>
@@ -492,25 +495,29 @@ blockquote {
 <li>Built RESTful APIs and micro services using NodeJS.</li>
 <li>Used socket.io to create open sockets for web clients to allow asynchronous updates.</li>
 </ul>
+<p> </p>
 <p><em>Senior Quality Assurance Engineer</em></p>
 <ul>
 <li>Used ASP.NET MVC4 to build a rudimentary CI tool that facilliated the selection and deployment of specific application builds to different test environments.</li>
 <li>Translated manual test cases into automated test scripts using the Ranorex DLL.</li>
 </ul>
-<p>February 2009 - April 2011
-<strong>UTC Retail, Inc.</strong>
+<p> </p>
+<p>February 2009 - April 2011<br>
+<strong>UTC Retail, Inc.</strong><br>
 <em>Quality Assurance Engineer III</em></p>
 <ul>
 <li>Built a test automation framework using QuickTest Professional and Visual Basic.</li>
 </ul>
-<p>March 2008 - February 2009
-<strong>Mediserve Information Systems, Inc.</strong>
+<p> </p>
+<p>March 2008 - February 2009<br>
+<strong>Mediserve Information Systems, Inc.</strong><br>
 <em>Quality Assurance Engineer II</em></p>
 <ul>
 <li>Created and executed manual test cases against .NET applications using MS Sql Server persistence.  Formed and executed SQL queries to validated data was correctly stored in MS Sql Server.</li>
 </ul>
-<p>May 2006 - March 2008
-<strong>Océ Reprographic Technologies</strong>
+<p> </p>
+<p>May 2006 - March 2008<br>
+<strong>Océ Reprographic Technologies</strong><br>
 <em>Quality Assurance Engineer I</em></p>
 <ul>
 <li>Created automated test scripts using QuickTest Professional.</li>
