--- a/resume.html
+++ b/resume.html
@@ -390,12 +390,11 @@ blockquote {
 <h5 id="professional-summary">PROFESSIONAL SUMMARY</h5>
 <hr>
 <ul>
-<li>Over a decade of experience in software development and testing.</li>
-<li>Six years of manual testing experience.</li>
 <li>Two (collective) years of automated testing experience.</li>
 <li>Two years of front-end development experience.</li>
 <li>Two years of full-stack development experience.</li>
 <li>Two years of back-end development experience.</li>
+<li>Six years of manual testing experience.</li>
 <li>Experience with AngularJS, NodeJS, ReactJS, MVC, WebApi, etc.</li>
 <li>Experience building RESTful services using .NET Framework/Core WebAPI.</li>
 <li>Experience building micro services using .NET Framwork/Core WebAPI.</li>
@@ -407,9 +406,9 @@ blockquote {
 <h5 id="technical-skills">TECHNICAL SKILLS</h5>
 <hr>
 <ul>
-<li><strong>Languages:</strong> C# (Advanced), Javascript (Intermediate), Ruby on Rails (Intermediate), Java (Novice)</li>
+<li><strong>Languages:</strong> C# (Advanced), Javascript (Intermediate), Ruby on Rails (Intermediate), Java</li>
 <li><strong>Operating Systems:</strong> Windows, macOS, Linux</li>
-<li><strong>Cloud:</strong> Heroku (Novice), Azure (Novice), AWS (Novice), Redis (Novice)</li>
+<li><strong>Cloud:</strong> Heroku, Azure, AWS, Redis</li>
 <li><strong>Web:</strong> ReactJS (Intermediate), JSON, Basic Auth, Jwt</li>
 <li><strong>Database:</strong> Microsoft SQL Server, Postgres, MongoDB, CosmosDB</li>
 </ul>
