--- a/resume.html
+++ b/resume.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>resume.md</title>
+<title>README.md</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 
 <style>
+/* https://github.com/microsoft/vscode/blob/master/extensions/markdown-language-features/media/markdown.css */
 /*---------------------------------------------------------------------------------------------
  *  Copyright (c) Microsoft Corporation. All rights reserved.
  *  Licensed under the MIT License. See License.txt in the project root for license information.
  *--------------------------------------------------------------------------------------------*/
 
 body {
-	font-family: "Segoe WPC", "Segoe UI", "SFUIText-Light", "HelveticaNeue-Light", sans-serif, "Droid Sans Fallback";
-	font-size: 14px;
-	padding: 0 12px;
-	line-height: 22px;
+	font-family: var(--vscode-markdown-font-family, -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", "Ubuntu", "Droid Sans", sans-serif);
+	font-size: var(--vscode-markdown-font-size, 14px);
+	padding: 0 26px;
+	line-height: var(--vscode-markdown-line-height, 22px);
 	word-wrap: break-word;
 }
 
@@ -38,7 +39,6 @@ body {
 	background-color:#007acc;
 	box-shadow: 2px 2px 2px rgba(0,0,0,.25);
 }
-
 
 body.scrollBeyondLastLine {
 	margin-bottom: calc(100vh - 22px);
@@ -71,12 +71,20 @@ body.showEditorSelection li.code-line:hover:before {
 	border-left: 3px solid rgba(0, 0, 0, 0.40);
 }
 
+.vscode-light.showEditorSelection .code-line .code-line:hover:before {
+	border-left: none;
+}
+
 .vscode-dark.showEditorSelection .code-active-line:before {
 	border-left: 3px solid rgba(255, 255, 255, 0.4);
 }
 
 .vscode-dark.showEditorSelection .code-line:hover:before {
 	border-left: 3px solid rgba(255, 255, 255, 0.60);
+}
+
+.vscode-dark.showEditorSelection .code-line .code-line:hover:before {
+	border-left: none;
 }
 
 .vscode-high-contrast.showEditorSelection .code-active-line:before {
@@ -87,14 +95,21 @@ body.showEditorSelection li.code-line:hover:before {
 	border-left: 3px solid rgba(255, 160, 0, 1);
 }
 
+.vscode-high-contrast.showEditorSelection .code-line .code-line:hover:before {
+	border-left: none;
+}
+
 img {
 	max-width: 100%;
 	max-height: 100%;
 }
 
 a {
-	color: #4080D0;
 	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
 }
 
 a:focus,
@@ -122,21 +137,6 @@ h1, h2, h3 {
 	font-weight: normal;
 }
 
-h1 code,
-h2 code,
-h3 code,
-h4 code,
-h5 code,
-h6 code {
-	font-size: inherit;
-	line-height: auto;
-}
-
-a:hover {
-	color: #4080D0;
-	text-decoration: underline;
-}
-
 table {
 	border-collapse: collapse;
 }
@@ -160,22 +160,18 @@ table > tbody > tr + tr > td {
 blockquote {
 	margin: 0 7px 0 5px;
 	padding: 0 16px 0 10px;
-	border-left: 5px solid;
+	border-left-width: 5px;
+	border-left-style: solid;
 }
 
 code {
 	font-family: Menlo, Monaco, Consolas, "Droid Sans Mono", "Courier New", monospace, "Droid Sans Fallback";
-	font-size: 14px;
-	line-height: 19px;
+	font-size: 1em;
+	line-height: 1.357em;
 }
 
 body.wordWrap pre {
 	white-space: pre-wrap;
-}
-
-.mac code {
-	font-size: 12px;
-	line-height: 18px;
 }
 
 pre:not(.hljs),
@@ -185,43 +181,22 @@ pre.hljs code > div {
 	overflow: auto;
 }
 
+pre code {
+	color: var(--vscode-editor-foreground);
+	tab-size: 4;
+}
+
 /** Theming */
 
-.vscode-light,
-.vscode-light pre code {
-	color: rgb(30, 30, 30);
-}
-
-.vscode-dark,
-.vscode-dark pre code {
-	color: #DDD;
-}
-
-.vscode-high-contrast,
-.vscode-high-contrast pre code {
-	color: white;
-}
-
-.vscode-light code {
-	color: #A31515;
-}
-
-.vscode-dark code {
-	color: #D7BA7D;
-}
-
-.vscode-light pre:not(.hljs),
-.vscode-light code > div {
+.vscode-light pre {
 	background-color: rgba(220, 220, 220, 0.4);
 }
 
-.vscode-dark pre:not(.hljs),
-.vscode-dark code > div {
+.vscode-dark pre {
 	background-color: rgba(10, 10, 10, 0.4);
 }
 
-.vscode-high-contrast pre:not(.hljs),
-.vscode-high-contrast code > div {
+.vscode-high-contrast pre {
 	background-color: rgb(0, 0, 0);
 }
 
@@ -249,16 +224,6 @@ pre.hljs code > div {
 	border-color: rgba(255, 255, 255, 0.18);
 }
 
-.vscode-light blockquote,
-.vscode-dark blockquote {
-	background: rgba(127, 127, 127, 0.1);
-	border-color: rgba(0, 122, 204, 0.5);
-}
-
-.vscode-high-contrast blockquote {
-	background: transparent;
-	border-color: #fff;
-}
 </style>
 
 <style>
@@ -343,7 +308,8 @@ pre.hljs code > div {
  */
 
  body {
-	font-family:  "Meiryo", "Segoe WPC", "Segoe UI", "SFUIText-Light", "HelveticaNeue-Light", sans-serif, "Droid Sans Fallback";
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", "Ubuntu", "Droid Sans", sans-serif, "Meiryo";
+	padding: 0 12px;
 }
 
 pre {
@@ -369,6 +335,11 @@ blockquote {
 	height: 1.4em;
 }
 
+code {
+	font-size: 14px;
+	line-height: 19px;
+}
+
 /* for inline code */
 :not(pre):not(.hljs) > code {
 	color: #C9AE75; /* Change the old color so it seems less like an error */
@@ -383,22 +354,32 @@ blockquote {
 
 </style>
 
+<script src="https://unpkg.com/mermaid/dist/mermaid.min.js"></script>
 </head>
 <body>
+  <script>
+    mermaid.initialize({
+      startOnLoad: true,
+      theme: document.body.classList.contains('vscode-dark') || document.body.classList.contains('vscode-high-contrast')
+          ? 'dark'
+          : 'default'
+    });
+  </script>
 <p>Tyler Daniel / (480) 370-4751 / aztdaniel@gmail.com</p>
 <p> </p>
 <h5 id="professional-summary">PROFESSIONAL SUMMARY</h5>
 <hr>
 <ul>
 <li>Two (collective) years of automated testing experience.</li>
-<li>Two years of front-end development experience.</li>
-<li>Two years of full-stack development experience.</li>
-<li>Two years of back-end development experience.</li>
+<li>Four years of front-end development experience.</li>
+<li>Six years of full-stack development experience.</li>
+<li>Seven years of back-end development experience.</li>
 <li>Six years of manual testing experience.</li>
 <li>Experience with AngularJS, NodeJS, ReactJS, MVC, WebApi, etc.</li>
-<li>Experience building RESTful services using .NET Framework/Core WebAPI.</li>
-<li>Experience building micro services using .NET Framwork/Core WebAPI.</li>
+<li>Experience building RESTful services using .NET WebApi.</li>
+<li>Experience building micro services using .NET WebApi.</li>
 <li>Experience building solutions using Test Driven Design principles.</li>
+<li>Experience building solutions using Domain Driven Design principles.</li>
 <li>Experience collaborating with others using GIT.</li>
 <li>Experience building web front-end experiences using AngularJS and ReactJS.</li>
 </ul>
@@ -415,8 +396,40 @@ blockquote {
 <p> </p>
 <h5 id="professional-experience">PROFESSIONAL EXPERIENCE</h5>
 <hr>
-<p>August 2018 - Present<br>
-<strong>HomeLight</strong><br>
+<p>August 2019 - Present
+<strong>Carvana</strong>
+<em>Team Lead, Engineer</em></p>
+<ul>
+<li>Worked directly with a Product Owner to translate business requirements to workable user stories</li>
+<li>Worked with other Team Leads and Product Owners on cross team projects</li>
+<li>Lead a team of engineers and accomplished the following:
+<ul>
+<li>Converted the single vehicle service contract offering to a branded tiered offering</li>
+<li>Migrated multiple microservices away from Azure app services and into Kubernetes</li>
+<li>Decomposed a monolith into logical microservices</li>
+<li>Created a new system that allowed for eagerly building protection products</li>
+<li>Mentored several team members from entry level positions into more experienced positions
+<ul>
+<li>Taught n-tier (clean architecture) design and the importance of boundaries</li>
+<li>Taught Domain Driven Design principles</li>
+<li>Taught Test Driven Design principles</li>
+<li>Taught SOLID principles and design patterns</li>
+<li>Taught functional programming priniples
+<ul>
+<li>immutability</li>
+<li>pure functions</li>
+<li>monads</li>
+<li>pattern matching</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<p> </p>
+<p>August 2018 - Present
+<strong>HomeLight</strong>
 <em>Senior Software Engineer</em></p>
 <ul>
 <li>Decoupled Investor business from Agent business by:
@@ -437,7 +450,7 @@ blockquote {
 <li>Fixed http timeouts to an in house priorty queue by identifying and implementing the following:
 <ul>
 <li>Hourly scheduled job to prune all unworkable leads</li>
-<li>Prune top N leads from the queue (where N is configurable) on every get request</li>
+<li>Prune top <em>n</em> leads from the queue (where <em>n</em> is configurable) on every get request</li>
 <li>Optimize prune operations by utilizing the native Redis zrem API</li>
 <li>Optimize business rules for determing workability
 <ul>
@@ -450,8 +463,8 @@ blockquote {
 </li>
 </ul>
 <p> </p>
-<p>March 2016 - August 2018<br>
-<strong>Carvana</strong><br>
+<p>March 2016 - August 2018
+<strong>Carvana</strong>
 <em>Software Engineer</em></p>
 <ul>
 <li>Built SOA software for a transaction process. This involved creating small services for determining purchase price, available ancillary products, payment and financing options, and purchase orders.</li>
@@ -467,8 +480,8 @@ blockquote {
 </li>
 </ul>
 <p> </p>
-<p>April 2015 - March 2016<br>
-<strong>Spireon, Inc.</strong><br>
+<p>April 2015 - March 2016
+<strong>Spireon, Inc.</strong>
 <em>Lead Software Engineer</em></p>
 <ul>
 <li>Built a vehicle tracking web solution utilizing google maps to to determine a path using multiple geo points.</li>
@@ -477,8 +490,8 @@ blockquote {
 <li>Directed and participated in the develompment of an iOS app written in Objective-C and Swift.</li>
 </ul>
 <p> </p>
-<p>April 2011 - April 2015<br>
-<strong>InEight, Inc.</strong><br>
+<p>April 2011 - April 2015
+<strong>InEight, Inc.</strong>
 <em>Software Engineer I</em></p>
 <ul>
 <li>Built a web admin portal using AngularJS and Bootstrap.</li>
@@ -501,22 +514,22 @@ blockquote {
 <li>Translated manual test cases into automated test scripts using the Ranorex DLL.</li>
 </ul>
 <p> </p>
-<p>February 2009 - April 2011<br>
-<strong>UTC Retail, Inc.</strong><br>
+<p>February 2009 - April 2011
+<strong>UTC Retail, Inc.</strong>
 <em>Quality Assurance Engineer III</em></p>
 <ul>
 <li>Built a test automation framework using QuickTest Professional and Visual Basic.</li>
 </ul>
 <p> </p>
-<p>March 2008 - February 2009<br>
-<strong>Mediserve Information Systems, Inc.</strong><br>
+<p>March 2008 - February 2009
+<strong>Mediserve Information Systems, Inc.</strong>
 <em>Quality Assurance Engineer II</em></p>
 <ul>
 <li>Created and executed manual test cases against .NET applications using MS Sql Server persistence.  Formed and executed SQL queries to validated data was correctly stored in MS Sql Server.</li>
 </ul>
 <p> </p>
-<p>May 2006 - March 2008<br>
-<strong>Océ Reprographic Technologies</strong><br>
+<p>May 2006 - March 2008
+<strong>Océ Reprographic Technologies</strong>
 <em>Quality Assurance Engineer I</em></p>
 <ul>
 <li>Created automated test scripts using QuickTest Professional.</li>
