--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>README.md</title>
+<title>resume.md</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 
 <style>
@@ -402,7 +402,7 @@ code {
 <ul>
 <li>Worked directly with a Product Owner to translate business requirements to workable user stories</li>
 <li>Worked with other Team Leads and Product Owners on cross team projects</li>
-<li>Lead a team of engineers and accomplished the following:
+<li>Led a team of engineers and accomplished the following:
 <ul>
 <li>Converted the single vehicle service contract offering to a branded tiered offering</li>
 <li>Migrated multiple microservices away from Azure app services and into Kubernetes</li>
