updates to resume

--- a/resume.html
+++ b/resume.html
@@ -370,10 +370,11 @@ code {
 <h5 id="professional-summary">PROFESSIONAL SUMMARY</h5>
 <hr>
 <ul>
-<li>Two (collective) years of automated testing experience.</li>
-<li>Four years of front-end development experience.</li>
-<li>Six years of full-stack development experience.</li>
+<li>Four years of team lead experience.</li>
 <li>Seven years of back-end development experience.</li>
+<li>Four years of front-end development experience.</li>
+<li>Ten years of full-stack development experience.</li>
+<li>Two (collective) years of automated testing experience.</li>
 <li>Six years of manual testing experience.</li>
 <li>Experience with AngularJS, NodeJS, ReactJS, MVC, WebApi, etc.</li>
 <li>Experience building RESTful services using .NET WebApi.</li>
@@ -387,10 +388,10 @@ code {
 <h5 id="technical-skills">TECHNICAL SKILLS</h5>
 <hr>
 <ul>
-<li><strong>Languages:</strong> C# (Advanced), Javascript (Intermediate), Ruby on Rails (Intermediate), Java</li>
+<li><strong>Languages:</strong> C#, Javascript, Ruby on Rails</li>
 <li><strong>Operating Systems:</strong> Windows, macOS, Linux</li>
-<li><strong>Cloud:</strong> Heroku, Azure, AWS, Redis</li>
-<li><strong>Web:</strong> ReactJS (Intermediate), JSON, Basic Auth, Jwt</li>
+<li><strong>Cloud:</strong> Azure</li>
+<li><strong>Web:</strong> ReactJS, JSON, Jwt</li>
 <li><strong>Database:</strong> Microsoft SQL Server, Postgres, MongoDB, CosmosDB</li>
 </ul>
 <p> </p>
@@ -400,7 +401,6 @@ code {
 <strong>Carvana</strong>
 <em>Team Lead, Engineer</em></p>
 <ul>
-<li>Worked directly with a Product Owner to translate business requirements to workable user stories</li>
 <li>Worked with other Team Leads and Product Owners on cross team projects</li>
 <li>Led a team of engineers and accomplished the following:
 <ul>
@@ -422,6 +422,18 @@ code {
 <li>pattern matching</li>
 </ul>
 </li>
+</ul>
+</li>
+</ul>
+</li>
+<li>Managed two teams and their domains
+<ul>
+<li>Worked with each Product Owner to translate business requirements to Acceptance Criteria</li>
+<li>Guided both teams in technical discussions and designs.  This included:
+<ul>
+<li>evaluating current systems architecture to determine possible solutions for business requirements</li>
+<li>documenting designs using flow charts</li>
+<li>planning and executing units of work to complete the project/product</li>
 </ul>
 </li>
 </ul>
