--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>resume.md</title>
+<title>README.md</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 
 <style>
@@ -370,12 +370,12 @@ code {
 <h5 id="professional-summary">PROFESSIONAL SUMMARY</h5>
 <hr>
 <ul>
-<li>Four years of team lead experience.</li>
-<li>Seven years of back-end development experience.</li>
-<li>Four years of front-end development experience.</li>
-<li>Ten years of full-stack development experience.</li>
-<li>Two (collective) years of automated testing experience.</li>
+<li>Five years of engineering management experience.</li>
+<li>Eight years of back-end development experience.</li>
+<li>Five years of front-end development experience.</li>
+<li>Eleven years of full-stack development experience.</li>
 <li>Six years of manual testing experience.</li>
+<li>Experience managing multiple development teams.</li>
 <li>Experience with AngularJS, NodeJS, ReactJS, MVC, WebApi, etc.</li>
 <li>Experience building RESTful services using .NET WebApi.</li>
 <li>Experience building micro services using .NET WebApi.</li>
@@ -383,6 +383,9 @@ code {
 <li>Experience building solutions using Domain Driven Design principles.</li>
 <li>Experience collaborating with others using GIT.</li>
 <li>Experience building web front-end experiences using AngularJS and ReactJS.</li>
+<li>Experience refactoring and upgrading legacy applications.</li>
+<li>Experience building greenfield projects.</li>
+<li>Experience building solutions using Agile/Scrum methodologies.</li>
 </ul>
 <p> </p>
 <h5 id="technical-skills">TECHNICAL SKILLS</h5>
@@ -390,42 +393,17 @@ code {
 <ul>
 <li><strong>Languages:</strong> C#, Javascript, Ruby on Rails</li>
 <li><strong>Operating Systems:</strong> Windows, macOS, Linux</li>
-<li><strong>Cloud:</strong> Azure</li>
-<li><strong>Web:</strong> ReactJS, JSON, Jwt</li>
-<li><strong>Database:</strong> Microsoft SQL Server, Postgres, MongoDB, CosmosDB</li>
+<li><strong>Cloud:</strong> Azure, Docker</li>
+<li><strong>Web:</strong> ReactJS, JSON</li>
+<li><strong>Database:</strong> Microsoft SQL Server, MongoDB, CosmosDB</li>
 </ul>
 <p> </p>
 <h5 id="professional-experience">PROFESSIONAL EXPERIENCE</h5>
 <hr>
-<p>August 2019 - Present
+<p>October 2023 - Present:
 <strong>Carvana</strong>
-<em>Team Lead, Engineer</em></p>
+<em>Engineering Manager</em></p>
 <ul>
-<li>Worked with other Team Leads and Product Owners on cross team projects</li>
-<li>Led a team of engineers and accomplished the following:
-<ul>
-<li>Converted the single vehicle service contract offering to a branded tiered offering</li>
-<li>Migrated multiple microservices away from Azure app services and into Kubernetes</li>
-<li>Decomposed a monolith into logical microservices</li>
-<li>Created a new system that allowed for eagerly building protection products</li>
-<li>Mentored several team members from entry level positions into more experienced positions
-<ul>
-<li>Taught n-tier (clean architecture) design and the importance of boundaries</li>
-<li>Taught Domain Driven Design principles</li>
-<li>Taught Test Driven Design principles</li>
-<li>Taught SOLID principles and design patterns</li>
-<li>Taught functional programming priniples
-<ul>
-<li>immutability</li>
-<li>pure functions</li>
-<li>monads</li>
-<li>pattern matching</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
 <li>Managed two teams and their domains
 <ul>
 <li>Worked with each Product Owner to translate business requirements to Acceptance Criteria</li>
@@ -440,7 +418,38 @@ code {
 </li>
 </ul>
 <p> </p>
-<p>August 2018 - Present
+<p>August 2019 - October 2023:
+<strong>Carvana</strong>
+<em>Team Lead, Engineer</em></p>
+<ul>
+<li>Worked with other Team Leads and Product Owners on cross team projects</li>
+<li>Led a team of engineers and accomplished the following:
+<ul>
+<li>Converted the single vehicle service contract offering to a branded tiered offering</li>
+<li>Migrated multiple microservices away from Azure app services and into Kubernetes</li>
+<li>Decomposed a monolith into logical microservices</li>
+<li>Created a new system that allowed for eagerly building vehicle service contracts</li>
+<li>Mentored several team members through to promotions
+<ul>
+<li>Taught n-tier (clean architecture) design and the importance of boundaries</li>
+<li>Taught Domain Driven Design principles</li>
+<li>Taught Test Driven Design principles</li>
+<li>Taught SOLID principles and design patterns</li>
+<li>Taught functional programming principles
+<ul>
+<li>immutability</li>
+<li>pure functions</li>
+<li>monads</li>
+<li>pattern matching</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<p> </p>
+<p>August 2018 - August 2019:
 <strong>HomeLight</strong>
 <em>Senior Software Engineer</em></p>
 <ul>
@@ -475,7 +484,7 @@ code {
 </li>
 </ul>
 <p> </p>
-<p>March 2016 - August 2018
+<p>March 2016 - August 2018:
 <strong>Carvana</strong>
 <em>Software Engineer</em></p>
 <ul>
@@ -492,7 +501,7 @@ code {
 </li>
 </ul>
 <p> </p>
-<p>April 2015 - March 2016
+<p>April 2015 - March 2016:
 <strong>Spireon, Inc.</strong>
 <em>Lead Software Engineer</em></p>
 <ul>
@@ -502,7 +511,7 @@ code {
 <li>Directed and participated in the develompment of an iOS app written in Objective-C and Swift.</li>
 </ul>
 <p> </p>
-<p>April 2011 - April 2015
+<p>April 2011 - April 2015:
 <strong>InEight, Inc.</strong>
 <em>Software Engineer I</em></p>
 <ul>
@@ -526,21 +535,21 @@ code {
 <li>Translated manual test cases into automated test scripts using the Ranorex DLL.</li>
 </ul>
 <p> </p>
-<p>February 2009 - April 2011
+<p>February 2009 - April 2011:
 <strong>UTC Retail, Inc.</strong>
 <em>Quality Assurance Engineer III</em></p>
 <ul>
 <li>Built a test automation framework using QuickTest Professional and Visual Basic.</li>
 </ul>
 <p> </p>
-<p>March 2008 - February 2009
+<p>March 2008 - February 2009:
 <strong>Mediserve Information Systems, Inc.</strong>
 <em>Quality Assurance Engineer II</em></p>
 <ul>
 <li>Created and executed manual test cases against .NET applications using MS Sql Server persistence.  Formed and executed SQL queries to validated data was correctly stored in MS Sql Server.</li>
 </ul>
 <p> </p>
-<p>May 2006 - March 2008
+<p>May 2006 - March 2008:
 <strong>Océ Reprographic Technologies</strong>
 <em>Quality Assurance Engineer I</em></p>
 <ul>
